syntax = "proto3";
package inference.inference;

option go_package = "github.com/productscience/inference/x/inference/types";

message Epoch {
  uint64 index  = 1;
  uint64 start_block_height = 2;
}
