syntax = "proto3";
package inference.inference;

option go_package = "github.com/productscience/inference/x/inference/types";

message EpochGroupValidations {
  string participant = 1;
  uint64 epoch_index = 2;
  repeated string validated_inferences = 3;

}

